Fix UI bug on download data pages and Update display names on tables and refactor data code

--- a/visualization/viewdata.html
+++ b/visualization/viewdata.html
@@ -11,13 +11,13 @@
     <!-- jquery -->
 
     <!-- jquery -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <!-- handlebars -->
     <script type="text/javascript"
-            src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs/jqc-1.12.4/dt-1.10.15/r-2.1.1/datatables.min.css"/>
+            src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>    
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css"/>
+    <!--<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">-->
     <link rel="stylesheet" type="text/css"
           href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css"/>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -29,6 +29,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
 
+    <script src="js/display_names.js"></script>
     <script src="js/viewData.js"></script>
 
 
@@ -47,14 +48,14 @@
 
 <!-- TABLE -->
 <div class="row">
-    <div class="col-lg-2"></div>
-    <div class="col-lg-8">
-        <div class="card" style="overflow-x:auto;margin-top:20px;padding:10px;">
-            <table class="table table-striped table-bordered" id="datatable">
+    <div class="col-lg-1"></div>
+    <div class="col-lg-10">
+        <div class="card" style="overflow-x:auto;">
+            <table class="table-bordered" id="datatable">
             </table>
         </div>
     </div>
-    <div class="col-lg-2"></div>
+    <div class="col-lg-1"></div>
 </div>
 <link rel="stylesheet" href="css/style.css"/>
 </body>
