--- a/visualization/viewdatasummary.html
+++ b/visualization/viewdatasummary.html
@@ -14,7 +14,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <!-- handlebars -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.5/handlebars.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.datatables.net/v/bs/jqc-1.12.4/dt-1.10.15/r-2.1.1/datatables.min.css"/>
+    
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/1.5.6/css/buttons.dataTables.min.css"/>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -26,7 +26,8 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/buttons/1.5.6/js/buttons.html5.min.js"></script>
  
-  <script src="js/viewDataSummary.js"></script>
+    <script src="js/display_names.js"></script>
+    <script src="js/viewDataSummary.js"></script>
 </head>
 
 <body style="overflow-x:scroll;overflow-y:scroll;">
