Bring back popover on both pages

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -242,7 +242,7 @@
         </nav>
         <svg id='viz'></svg>
         <div id="goto">
-            <a class="standard-label-text standard-label-text-bold" href="scatterplot.html">See Pair Plots</a>
+<!--            <a class="standard-label-text standard-label-text-bold" href="scatterplot.html">See Pair Plots</a>-->
             <a type="button" class="btn btn-light" id="click-me" data-trigger="click" data-toggle="popover">View Options</a>
 
         </div>
