--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -84,7 +84,7 @@
     <div id="graph-box">
         <svg id='plt'></svg>
         <div id="goto">
-            <a class="standard-label-text standard-label-text-bold" href="index.html">See Network Graph</a>
+<!--            <a class="standard-label-text standard-label-text-bold" href="index.html">See Network Graph</a>-->
             <button type="button" class="btn btn-light" id="click-me" data-trigger="click" data-toggle="popover">View Options</button>
 
         </div>
