--- a/visualization/index.html
+++ b/visualization/index.html
@@ -231,11 +231,11 @@
                             </button>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link standard-label-text" href="#" onclick="goToPairPlotsGraph()">View Network</a>
+                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Pair Plots</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Scatterplots</a>
-                        </li>
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Scatterplots</a>-->
+<!--                        </li>-->
                     </ul>
                 </div>
             </div>
