--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -65,16 +65,17 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#" onclick="goToNetworkGraph()">View Network Graph</a>
                         <li class="reset-button-li">
                             <button type="button" id="resetGraph" class="btn btn-info outer-button reset-button standard-label-text" onclick="reset()">
                                 Reset Plots
                             </button>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Network</a>
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#" onclick="popupGo()">View Network Graph</a>
                         </li>
+<!--                        <li class="nav-item">-->
+<!--                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Network</a>-->
+<!--                        </li>-->
                     </ul>
                 </div>
             </div>
