--- a/visualization/index.html
+++ b/visualization/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ASL-LEX 2.0</title>
-    <link rel="shortcut icon" type="image/jpg" href="favicon.ico"/>
+    <link rel="shortcut icon" type="image/jpg" href="assets/favicon.ico"/>
     <link rel="stylesheet" href="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">    
     <!-- jquery -->
@@ -264,7 +264,7 @@
                     <p class="centered-text standard-label-text">Please click on the INSTRUCTIONS tab once you are there.</p>
                 </div>
                 <div class="centered-in-model">
-                    <img id="tutorialGif" src="tutorial_demo.gif">
+                    <img id="tutorialGif" src="assets/tutorial_demo.gif">
                 </div>
             </div>
             <div class="modal-footer modal-footer-custom">
