--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -53,7 +53,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
 
-                <button type="button" id="sidebarCollapse" class="btn btn-info outer-button">
+                <button type="button" id="sidebarCollapse" class="btn outer-button">
                     <i class="fa fa-align-left"></i>
                     <span class="standard-label-text">Show Menu</span>
                 </button>
@@ -66,7 +66,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="reset-button-li">
-                            <button type="button" id="resetGraph" class="btn btn-info outer-button reset-button standard-label-text" onclick="reset()">
+                            <button type="button" id="resetGraph" class="btn outer-button reset-button standard-label-text" onclick="reset()">
                                 Reset Plots
                             </button>
                         </li>
