Changed Tutorial Video

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -259,16 +259,13 @@
                 </button>
             </div>
             <div class="modal-body modal-body-custom">
-                <div class="centered-in-model large-modal-text">
-                    <p class="centered-text standard-label-text">You will be taken to an external page to see a tutorial.</p>
-                    <p class="centered-text standard-label-text">Please click on the INSTRUCTIONS tab once you are there.</p>
-                </div>
                 <div class="centered-in-model">
-                    <img id="tutorialGif" src="assets/tutorial_demo.gif">
+                    <iframe width="700" height="400" src="https://www.youtube.com/embed/BMHOC-gl2Ng?autoplay=1 &mute=1" frameborder="0">
+                    </iframe>
                 </div>
             </div>
             <div class="modal-footer modal-footer-custom">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="openTutorial()">Ok</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="openTutorial()">See here for detailed information about ASL-LEX</button>
             </div>
     </div>
 </div>
