--- a/visualization/index.html
+++ b/visualization/index.html
@@ -258,14 +258,15 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
+
             <div class="modal-body modal-body-custom">
                 <div class="centered-in-model">
                     <iframe width="700" height="400" src="https://www.youtube.com/embed/BMHOC-gl2Ng?autoplay=1 &mute=1" frameborder="0">
                     </iframe>
                 </div>
             </div>
-            <div class="modal-footer modal-footer-custom">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" onclick="openTutorial()">See here for detailed information about ASL-LEX</button>
+            <div class="centered-in-model large-modal-text">
+                <p class="centered-text standard-label-text"><a href="http://asl-lex.org/" target="_blank">Click here</a> for detailed information about ASL-LEX</p>
             </div>
     </div>
 </div>
