Added color to link

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -266,7 +266,7 @@
                 </div>
             </div>
             <div class="centered-in-model large-modal-text">
-                <p class="centered-text standard-label-text"><a href="http://asl-lex.org/" target="_blank">Click here</a> for detailed information about ASL-LEX</p>
+                <p class="centered-text standard-label-text">Click <a class="link" href="http://asl-lex.org/" target="_blank">here</a> for detailed information about ASL-LEX</p>
             </div>
     </div>
 </div>
