--- a/visualization/index.html
+++ b/visualization/index.html
@@ -261,7 +261,7 @@
 
             <div class="modal-body modal-body-custom">
                 <div class="centered-in-model">
-                    <iframe width="700" height="400" src="https://www.youtube.com/embed/BMHOC-gl2Ng?autoplay=1 &mute=1" frameborder="0">
+                    <iframe width="700" height="400" src="https://www.youtube.com/embed/BMHOC-gl2Ng?autoplay=1&mute=1" frameborder="0" allowfullscreen>
                     </iframe>
                 </div>
             </div>
