--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                             </button>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Pair Plots</a>
+                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Scatterplots</a>
                         </li>
 <!--                        <li class="nav-item">-->
 <!--                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Scatterplots</a>-->
