--- a/visualization/index.html
+++ b/visualization/index.html
@@ -226,7 +226,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
                         <li class="viewScatterplots-button-li">
-                            <button type="button" id="viewScatterplots" class=" outer-button viewScatterplots-button standard-label-text btn" onclick="popupGo()">
+                            <button type="button" id="viewScatterplots" class=" outline-button viewScatterplots-button standard-label-text btn" onclick="popupGo()">
                                 View Scatterplots
                             </button>
                         </li>                        
