--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -65,8 +65,8 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="viewNetwrokGraph-button-li">
-                            <button type="button" id="viewnetworkgraph" class="btn outer-button viewNetwrokGraph-button standard-label-text" onclick="popupGo()">
+                        <li class="viewNetworkGraph-button-li">
+                            <button type="button" id="viewnetworkgraph" class="btn outline-button viewNetworkGraph-button standard-label-text" onclick="popupGo()">
                                 View Network Graph
                             </button>
                         </li>
