Added icons to scatterplot, reset, and network graph buttons

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -227,7 +227,7 @@
                     <ul class="nav navbar-nav ml-auto">
                         <li class="viewScatterplots-button-li">
                             <button type="button" id="viewScatterplots" class=" outline-button viewScatterplots-button standard-label-text btn" onclick="popupGo()">
-                                View Scatterplots
+                                <i class="icon"></i>View Scatterplots
                             </button>
                         </li>                        
                         <!-- <li class="nav-item active">
@@ -235,7 +235,7 @@
                         </li> -->
                         <li class="reset-button-li">
                             <button type="button" id="resetGraph" class=" outer-button reset-button standard-label-text btn" onclick="reset()">
-                                Reset Graph
+                                <i class="fas fa-redo-alt"></i> Reset Graph
                             </button>
                         </li>
 <!--                        <li class="nav-item">-->
