--- a/visualization/scatterplot.html
+++ b/visualization/scatterplot.html
@@ -67,7 +67,7 @@
                     <ul class="nav navbar-nav ml-auto">
                         <li class="viewNetworkGraph-button-li">
                             <button type="button" id="viewnetworkgraph" class="btn outline-button viewNetworkGraph-button standard-label-text" onclick="popupGo()">
-                                View Network Graph
+                                <i class="fas fa-project-diagram"></i> View Network Graph
                             </button>
                         </li>
                         <!-- <li class="nav-item active">
@@ -75,7 +75,7 @@
                         </li> -->
                         <li class="reset-button-li">
                             <button type="button" id="resetGraph" class="btn outer-button reset-button standard-label-text" onclick="reset()">
-                                Reset Plots
+                                <i class="fas fa-redo-alt"></i> Reset Plots
                             </button>
                         </li>
 <!--                        <li class="nav-item">-->
