--- a/scatterplot.html
+++ b/scatterplot.html
@@ -65,13 +65,18 @@
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav ml-auto">
-                        <li class="reset-button-li">
-                            <button type="button" id="resetGraph" class="btn outer-button reset-button standard-label-text" onclick="reset()">
-                                Reset Plots
+                        <li class="viewNetworkGraph-button-li">
+                            <button type="button" id="viewnetworkgraph" class="btn outline-button viewNetworkGraph-button standard-label-text" onclick="popupGo()">
+                                <i class="fas fa-project-diagram"></i> View Network Graph
                             </button>
                         </li>
-                        <li class="nav-item active">
+                        <!-- <li class="nav-item active">
                             <a class="nav-link" href="#" onclick="popupGo()">View Network Graph</a>
+                        </li> -->
+                        <li class="reset-button-li">
+                            <button type="button" id="resetGraph" class="btn outer-button reset-button standard-label-text" onclick="reset()">
+                                <i class="fas fa-redo-alt"></i> Reset Plots
+                            </button>
                         </li>
 <!--                        <li class="nav-item">-->
 <!--                            <a class="nav-link standard-label-text" href="#" onclick="popupGo()">View Network</a>-->
