--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                                                 <div class="row">
                                                                     <div class="col">
                                                                         <input type="checkbox" class="form-check-input filters-checkbox" id="{{ID}}">
-                                                                        <label class="form-check-label filters-label standard-label-text standard-label-text-black" for="{{ID}}">{{value}}
+                                                                        <label class="form-check-label filters-label standard-label-text standard-label-text-black" for="{{ID}}">{{{value}}}
                                                                         <span id="{{concate ID '_count'}}"></span>
                                                                         </label>            
                                                                     </div>                  
