Fixed spelling errors

--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 								<p>ASL-LEX is available as a searchable web interface and as raw data in spreadsheet form. This website hosts the <a href="https://asl-lex.github.io/asl-lex/index.html">web visualization</a> and provides <a href="instructions.html">instructions</a> for how to use and <a href="download.html">download</a> the database.</p>
 
 								<ul class="actions">
-									<li><a href="visualization/index.html" class="button primary large icon fa-project-diagram" target="_new">View the Visualization</a></li>
+									<li><a href="https://asl-lex.github.io/asl-lex/index.html" class="button primary large icon fa-project-diagram" target="_new">View the Visualization</a></li>
 									<li><a href="download.html" class="button primary large icon fa-download">Download the Data</a></li>
 
 							</div>
@@ -204,8 +204,8 @@
 						<p>The original work on ASL-LEX was supported by the National Institutes of Health DC010997 to Dr. Karen Emmorey and San Diego State University, a Tufts University Faculty Research Award to Dr. Ariel Cohen-Goldberg, and a Tufts University Graduate Research Award to Dr. Naomi Caselli.</p>
 						<p>Continuing work on ASL-LEX is supported by the <a href="https://www.nsf.gov/" target="_new">National Science Foundation</a>, <a href="https://www.nsf.gov/div/index.jsp?div=bcs" target="_new">Division of Behavioral and Cognitive Sciences</a>.</p>
 						<ul>
-							<li>NSF Awards BCS-1625954 and BCS-1918556 to Dr. Karen Emmorey</li>
-							<li>NSF Award BCS-1918556 to Dr. Zed Zevcikova Sehyr</li>
+							<li>NSF Award BCS-1918556 to Dr. Zed Sevcikova Sehyr & Dr. Karen Emmorey</li>
+							<li>NSF Awards BCS-1625954 Dr. Karen Emmorey</li>
 							<li>NSF Awards BCS-1625793 and BCS-1918252 to Dr. Naomi Caselli</li>
 							<li>NSF Awards BCS-1625761 and BCS-1918261 to Dr. Ariel Cohen-Goldberg</li>
 						</ul>
