Fixed spelling errors

--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
 							<article>
 								<span class="image"><img src="images/zed_sevcikova_sehyr.jpg" alt="Zed Sevicova Sehyr"></span>
 								<p>
-									<strong class="name">Zed Sevicova Sehyr</strong>
+									<strong class="name">Zed Sevcikova Sehyr</strong>
 									<span class="title">School of Speech, Language, and Hearing Sciences<br/>San Diego State University<br/><a href="http://zedsehyr.weebly.com/">Visit Zed's Website</a></span>
 								</p>
 							</article>
