--- a/about.html
+++ b/about.html
@@ -175,7 +175,7 @@
 							<article>
 								<span class="image"><img src="images/zed_sevcikova_sehyr.jpg" alt="Zed Sevicova Sehyr"></span>
 								<p>
-									<strong class="name">Zed Sevcikova Sehyr</strong>
+									<strong class="name">Zed Sevicova Sehyr</strong>
 									<span class="title">School of Speech, Language, and Hearing Sciences<br/>San Diego State University<br/><a href="http://zedsehyr.weebly.com/">Visit Zed's Website</a></span>
 								</p>
 							</article>
@@ -204,8 +204,8 @@
 						<p>The original work on ASL-LEX was supported by the National Institutes of Health DC010997 to Dr. Karen Emmorey and San Diego State University, a Tufts University Faculty Research Award to Dr. Ariel Cohen-Goldberg, and a Tufts University Graduate Research Award to Dr. Naomi Caselli.</p>
 						<p>Continuing work on ASL-LEX is supported by the <a href="https://www.nsf.gov/" target="_new">National Science Foundation</a>, <a href="https://www.nsf.gov/div/index.jsp?div=bcs" target="_new">Division of Behavioral and Cognitive Sciences</a>.</p>
 						<ul>
-							<li>NSF Award BCS-1918556 to Dr. Zed Sevcikova Sehyr & Dr. Karen Emmorey</li>
-							<li>NSF Awards BCS-1625954 Dr. Karen Emmorey</li>
+							<li>NSF Awards BCS-1625954 and BCS-1918556 to Dr. Karen Emmorey</li>
+							<li>NSF Award BCS-1918556 to Dr. Zed Zevcikova Sehyr</li>
 							<li>NSF Awards BCS-1625793 and BCS-1918252 to Dr. Naomi Caselli</li>
 							<li>NSF Awards BCS-1625761 and BCS-1918261 to Dr. Ariel Cohen-Goldberg</li>
 						</ul>
@@ -214,6 +214,18 @@
 				</div>
 
 			</footer>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<div class="copyright">
+						<ul class="icons">
+							<li><a href="mailto:asllexproject@gmail.com" class="icon solid fa-envelope"></a></li>
+							<li><a href="https://twitter.com/asl_lex/" target="_blank" class="icon brands fa-twitter"></a></li>
+							<li><a href="https://www.facebook.com/asllexproject/" target="_blank" class="icon brands fa-facebook"></a></li>
+						</ul>
+						<a href="download.html">Website, visualization & all videos &copy; ASL-LEX.org. ASL-LEX database CC-By-NC 4.0.</a>
+					</div>
+				</footer>
 
 
 		<!-- Scripts -->
