--- a/download.html
+++ b/download.html
@@ -88,6 +88,18 @@
 
 			</div>
 
+			<!-- Footer -->
+				<footer id="footer">
+					<div class="copyright">
+						<ul class="icons">
+							<li><a href="mailto:asllexproject@gmail.com" class="icon solid fa-envelope"></a></li>
+							<li><a href="https://twitter.com/asl_lex/" target="_blank" class="icon brands fa-twitter"></a></li>
+							<li><a href="https://www.facebook.com/asllexproject/" target="_blank" class="icon brands fa-facebook"></a></li>
+						</ul>
+						<a href="download.html">Website, visualization & all videos &copy; ASL-LEX.org. ASL-LEX database CC-By-NC 4.0.</a>
+					</div>
+				</footer>
+
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.dropotron.min.js"></script>
