--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<h2>ASL-LEX</h2>
 										<h3>Visualizing the ASL Lexicon</h3>
 										<ul class="actions">
-											<li><a class="button primary large" href="visualization/index.html" target="_new">Explore the Lexicon</a></li>
+											<li><a class="button primary large" href="https://asl-lex.github.io/asl-lex/index.html" target="_new">Explore the Lexicon</a></li>
 										</ul>
 									</div>
 								</article>
@@ -67,7 +67,7 @@
 										<h2>ASL-LEX</h2>
 										<h3>Visualizing the ASL Lexicon</h3>
 										<ul class="actions">
-											<li><a class="button primary large" href="visualization/index.html" target="_new">Explore the Lexicon</a></li>
+											<li><a class="button primary large" href="https://asl-lex.github.io/asl-lex/index.html" target="_new">Explore the Lexicon</a></li>
 										</ul>
 									</div>
 								</article>
@@ -102,6 +102,19 @@
 
 
 			</div>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<div class="copyright">
+						<ul class="icons">
+							<li><a href="mailto:asllexproject@gmail.com" class="icon solid fa-envelope"></a></li>
+							<li><a href="https://twitter.com/asl_lex/" target="_blank" class="icon brands fa-twitter"></a></li>
+							<li><a href="https://www.facebook.com/asllexproject/" target="_blank" class="icon brands fa-facebook"></a></li>
+						</ul>
+						<a href="download.html">Website, visualization & all videos &copy; ASL-LEX.org. ASL-LEX database CC-By-NC 4.0.</a>
+					</div>
+				</footer>
+
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
