Fix visualization link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 										<h2>ASL-LEX</h2>
 										<h3>Visualizing the ASL Lexicon</h3>
 										<ul class="actions">
-											<li><a class="button primary large" href="https://asl-lex.github.io/asl-lex/index.html" target="_new">Explore the Lexicon</a></li>
+											<li><a class="button primary large" href="visualization/index.html" target="_new">Explore the Lexicon</a></li>
 										</ul>
 									</div>
 								</article>
@@ -67,7 +67,7 @@
 										<h2>ASL-LEX</h2>
 										<h3>Visualizing the ASL Lexicon</h3>
 										<ul class="actions">
-											<li><a class="button primary large" href="https://asl-lex.github.io/asl-lex/index.html" target="_new">Explore the Lexicon</a></li>
+											<li><a class="button primary large" href="visualization/index.html" target="_new">Explore the Lexicon</a></li>
 										</ul>
 									</div>
 								</article>
