Fix visualization link

--- a/about.html
+++ b/about.html
@@ -60,10 +60,10 @@
 								<p>ASL-LEX is a database of lexical and phonological properties of American Sign Language signs.
 								It was first released in 2016 with nearly 1,000 signs. ASL-LEX was updated in Fall 2020 with greatly expanded information and an increased size of 2,723 signs.
 								</p>
-								<p>ASL-LEX is available as a searchable web interface and as raw data in spreadsheet form. This website hosts the <a href="https://asl-lex.github.io/asl-lex/index.html">web visualization</a> and provides <a href="instructions.html">instructions</a> for how to use and <a href="download.html">download</a> the database.</p>
+								<p>ASL-LEX is available as a searchable web interface and as raw data in spreadsheet form. This website hosts the <a href="visualization/">web visualization</a> and provides <a href="instructions.html">instructions</a> for how to use and <a href="download.html">download</a> the database.</p>
 
 								<ul class="actions">
-									<li><a href="https://asl-lex.github.io/asl-lex/index.html" class="button primary large icon fa-project-diagram" target="_new">View the Visualization</a></li>
+									<li><a href="visualization/" class="button primary large icon fa-project-diagram" target="_blank">View the Visualization</a></li>
 									<li><a href="download.html" class="button primary large icon fa-download">Download the Data</a></li>
 
 							</div>
@@ -146,7 +146,7 @@
 						<p>There are two articles that describe the procedures used to create the database and the 2.0 update. These articles report descriptive statistics for many sign properties and report analyses designed to more deeply understand how phonological, lexical, and semantic factors interact in the ASL lexicon.</p>
 						<ul>
 							<li>Sevcikova Sehyr, Z., Caselli, N., Cohen-Goldberg, A. M., & Emmorey, K. (2021). ​The ASL-LEX 2.0 Project: A database of lexical and phonological properties for 2,723 signs in American Sign Language. <i>Journal of Deaf Studies and Deaf Education</i>.</li>
-							<li>Caselli, N., Sevcikova Sehyr, Z., Cohen-Goldberg, A. M., & Emmorey, K. (2017). ASL-LEX: A lexical database of American Sign Language. <i>Behavior Research Methods, 49</i>(2), 784-801. <a href="https://doi.org/10.3758/s13428-016-0742-0" target="_new">doi:10.3758/s13428-016-0742-0</a>.</li>
+							<li>Caselli, N., Sevcikova Sehyr, Z., Cohen-Goldberg, A. M., & Emmorey, K. (2017). ASL-LEX: A lexical database of American Sign Language. <i>Behavior Research Methods, 49</i>(2), 784-801. <a href="https://doi.org/10.3758/s13428-016-0742-0" target="_blank">doi:10.3758/s13428-016-0742-0</a>.</li>
 						</ul>
 
 						<h3>Creators</h3>
@@ -175,7 +175,7 @@
 							<article>
 								<span class="image"><img src="images/zed_sevcikova_sehyr.jpg" alt="Zed Sevicova Sehyr"></span>
 								<p>
-									<strong class="name">Zed Sevicova Sehyr</strong>
+									<strong class="name">Zed Sevcikova Sehyr</strong>
 									<span class="title">School of Speech, Language, and Hearing Sciences<br/>San Diego State University<br/><a href="http://zedsehyr.weebly.com/">Visit Zed's Website</a></span>
 								</p>
 							</article>
@@ -202,10 +202,10 @@
 					<article>
 						<h3>Funding</h3>
 						<p>The original work on ASL-LEX was supported by the National Institutes of Health DC010997 to Dr. Karen Emmorey and San Diego State University, a Tufts University Faculty Research Award to Dr. Ariel Cohen-Goldberg, and a Tufts University Graduate Research Award to Dr. Naomi Caselli.</p>
-						<p>Continuing work on ASL-LEX is supported by the <a href="https://www.nsf.gov/" target="_new">National Science Foundation</a>, <a href="https://www.nsf.gov/div/index.jsp?div=bcs" target="_new">Division of Behavioral and Cognitive Sciences</a>.</p>
+						<p>Continuing work on ASL-LEX is supported by the <a href="https://www.nsf.gov/" target="_blank">National Science Foundation</a>, <a href="https://www.nsf.gov/div/index.jsp?div=bcs" target="_new">Division of Behavioral and Cognitive Sciences</a>.</p>
 						<ul>
-							<li>NSF Awards BCS-1625954 and BCS-1918556 to Dr. Karen Emmorey</li>
-							<li>NSF Award BCS-1918556 to Dr. Zed Zevcikova Sehyr</li>
+							<li>NSF Award BCS-1918556 to Dr. Zed Sevcikova Sehyr and Dr. Karen Emmorey</li>
+							<li>NSF Awards BCS-1625954 to Dr. Karen Emmorey</li>
 							<li>NSF Awards BCS-1625793 and BCS-1918252 to Dr. Naomi Caselli</li>
 							<li>NSF Awards BCS-1625761 and BCS-1918261 to Dr. Ariel Cohen-Goldberg</li>
 						</ul>
