Add link to visualization

--- a/instructions.html
+++ b/instructions.html
@@ -57,7 +57,7 @@
 									</header>
 
 									<p>
-										This website provides a searchable, interactive visualization of the ~2,700 ASL signs contained in the ASL-LEX 2.0 database.
+										This website provides a <a href="visualization/" target="_blank">searchable, interactive visualization</a> of the ~2,700 ASL signs contained in the ASL-LEX 2.0 database.
 										The visualization provides two ways to view the sign data: the Network Graph and the Scatterplot View.
 									</p>
 
