Make visualization link open in new browser window

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 								<p>ASL-LEX is a database of lexical and phonological properties of American Sign Language signs.
 								It was first released in 2016 with nearly 1,000 signs. ASL-LEX was updated in Fall 2020 with greatly expanded information and an increased size of 2,723 signs.
 								</p>
-								<p>ASL-LEX is available as a searchable web interface and as raw data in spreadsheet form. This website hosts the <a href="visualization/">web visualization</a> and provides <a href="instructions.html">instructions</a> for how to use and <a href="download.html">download</a> the database.</p>
+								<p>ASL-LEX is available as a searchable web interface and as raw data in spreadsheet form. This website hosts the <a href="visualization/" target="_blank">web visualization</a> and provides <a href="instructions.html">instructions</a> for how to use and <a href="download.html">download</a> the database.</p>
 
 								<ul class="actions">
 									<li><a href="visualization/" class="button primary large icon fa-project-diagram" target="_blank">View the Visualization</a></li>
