--- a/instructions.html
+++ b/instructions.html
@@ -147,7 +147,7 @@
 							<li><a href="https://twitter.com/asl_lex/" target="_blank" class="icon brands fa-twitter"></a></li>
 							<li><a href="https://www.facebook.com/asllexproject/" target="_blank" class="icon brands fa-facebook"></a></li>
 						</ul>
-						<a href="download.html">Website, visualization & all videos &copy; ASL-LEX.org. ASL-LEX database CC-By-NC 4.0.</a>
+						<a href="download.html">Website & videos &copy; ASL-LEX.org. ASL-LEX database and visualization CC BY-NC 4.0.</a>
 					</div>
 				</footer>
 
