--- a/download.html
+++ b/download.html
@@ -53,8 +53,8 @@
 								<!-- Left Column -->
 								<div class="col-6 col-12-medium">
 									<h3>License</h3>
-									<p>The <strong>ASL-LEX database</strong> is licensed under a Creative Commons Attribution-NonCommercial 4.0 International License (<a rel="license" href="https://creativecommons.org/licenses/by-nc/4.0">CC-By-NC 4.0</a>). This means you can reuse and remix this content as long as 1) you give proper credit and 2) the content is used for non-commercial purposes. <a rel="license" href="https://creativecommons.org/licenses/by-nc/4.0" style="border-bottom: none;"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" /><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" /><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" /></a></p>
-									<p>The <strong>ASL-LEX visualization</strong>, hosted on this website and comprising the Node Graph, Scatterplot View, and all sign videos, is copyrighted and is provided solely for the purpose of personally accessing the information contained in the ASL-LEX database. It may not be used for any other purpose without explicit permission.</p>
+									<p>The <strong>ASL-LEX database</strong> and the ASL-LEX visualization (excluding sign reference videos) are licensed under a Creative Commons Attribution-NonCommercial 4.0 International License (<a rel="license" href="https://creativecommons.org/licenses/by-nc/4.0">CC BY-NC 4.0</a>). This means you can reuse and remix this content as long as 1) you give proper credit and 2) the content is used for non-commercial purposes. <a rel="license" href="https://creativecommons.org/licenses/by-nc/4.0" style="border-bottom: none;"><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" /><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" /><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/nc.svg?ref=chooser-v1" /></a></p>
+									<p>The <strong>sign reference videos</strong> are &copy; ASL-LEX.org and are provided solely for personal searches of the ASL-LEX database. They may not be saved, displayed, or otherwise used for any other purpose without explicit permission.</p>
 									<p><strong>Use of any part of ASL-LEX for commercial purposes is expressly prohibited.</strong></p>
 								</div>
 								<!-- End Left Column -->
@@ -96,7 +96,7 @@
 							<li><a href="https://twitter.com/asl_lex/" target="_blank" class="icon brands fa-twitter"></a></li>
 							<li><a href="https://www.facebook.com/asllexproject/" target="_blank" class="icon brands fa-facebook"></a></li>
 						</ul>
-						<a href="download.html">Website, visualization & all videos &copy; ASL-LEX.org. ASL-LEX database CC-By-NC 4.0.</a>
+						<a href="download.html">Website & videos &copy; ASL-LEX.org. ASL-LEX database and visualization CC BY-NC 4.0.</a>
 					</div>
 				</footer>
 
