Add Cindy's photo and link to 1.0 visualization

--- a/about.html
+++ b/about.html
@@ -149,6 +149,9 @@
 							<li>Caselli, N., Sevcikova Sehyr, Z., Cohen-Goldberg, A. M., & Emmorey, K. (2017). ASL-LEX: A lexical database of American Sign Language. <i>Behavior Research Methods, 49</i>(2), 784-801. <a href="https://doi.org/10.3758/s13428-016-0742-0" target="_blank">doi:10.3758/s13428-016-0742-0</a>.</li>
 						</ul>
 
+						<h3>ASL-LEX 1.0</h3>
+						<p>The original ASL-LEX 1.0 database was released in 2016 and contained data for 993 signs. With the release of the new version, users are strongly recommended to only use data from ASL-LEX 2.0 going forward. This is because the new version contains more than twice as many signs, many more properties, and is likely to have more accurate values for properties such as neighborhood density which are calculated over the lexicon as a whole. To maintain compatibility with older research, users may still access the original <a href="http://ben-tanen.com/asl-lex/visualization/" target="_blank">ASL-LEX 1.0 visualization</a>.
+
 						<h3>Creators</h3>
 						<!--<div class="about">-->
 							<p>ASL-LEX is a collaboration between the <a href="https://emmoreylab.sdsu.edu/">Laboratory for Language and Cognitive Neuroscience</a> at <a href="https://www.sdsu.edu/">San Diego State University</a>, the <a href="https://www.bu.edu/sed/">Programs in Deaf Studies</a> at <a href="https://www.bu.edu/">Boston University</a>, and the <a href="https://ase.tufts.edu/psychology/psycholinglab/">Psycholinguistics and Linguistics Lab</a> at <a href="https://www.tufts.edu">Tufts University.</a></p>
@@ -186,6 +189,15 @@
 								<p>
 									<strong class="name">Ariel Cohen-Goldberg</strong>
 									<span class="title">Dept of Psychology, Tufts University<br/><a href="https://ase.tufts.edu/psychology/psycholinglab/">Visit Ariel's Website</a></span>
+								</p>
+							</article>
+						</div>
+						<div class="team">
+							<article>
+								<span class="image"><img src="images/cindy_ogrady_farnady.jpg" alt="Cindy O'Grady Farnady"></span>
+								<p>
+									<strong class="name">Cindy O'Grady Farnady</strong>
+									<span class="title">School of Speech, Language, and Hearing Sciences<br/>San Diego State University<br/><a href="https://slhs.sdsu.edu/llcn/people/researchers/">Visit Cindy's Website</a></span>
 								</p>
 							</article>
 						</div>
