Add link to 2.0 article

--- a/publications.html
+++ b/publications.html
@@ -55,7 +55,7 @@
 								<h2>Articles Describing ASL-LEX</h2>
 								<p>These articles describe the procedures used to create the database, report descriptive statistics for a number of sign properties, and report analyses designed to more deeply understand how phonological, lexical, and semantic factors interact in the ASL lexicon.</p>
 								<ul>
-									<li>Sevcikova Sehyr, Z., Caselli, N., Cohen-Goldberg, A. M., & Emmorey, K. (in press). ​The ASL-LEX 2.0 Project: A database of lexical and phonological properties for 2,723 signs in American Sign Language. <i>Journal of Deaf Studies and Deaf Education</i>.</li>
+									<li><a href="https://doi.org/10.1093/deafed/enaa038" target="_blank">Sevcikova Sehyr, Z., Caselli, N., Cohen-Goldberg, A. M., & Emmorey, K. (2021). ​The ASL-LEX 2.0 Project: A database of lexical and phonological properties for 2,723 signs in American Sign Language. <i>Journal of Deaf Studies and Deaf Education</i>. doi.org/10.1093/deafed/enaa038</a>.</li>
 									<li><a href="https://link.springer.com/article/10.3758/s13428-016-0742-0">Caselli, N., Sevcikova Sehyr, Z., Cohen-Goldberg, A. M., & Emmorey, K. (2017). ASL-LEX: A lexical database of American Sign Language. <i>Behavior Research Methods, 49</i>(2), 784-801. doi:10.3758/s13428-016-0742-0</a></li>
 								</ul>
 
