--- a/about.html
+++ b/about.html
@@ -145,7 +145,7 @@
 						<h3>Articles</h3>
 						<p>There are two articles that describe the procedures used to create the database and the 2.0 update. These articles report descriptive statistics for many sign properties and report analyses designed to more deeply understand how phonological, lexical, and semantic factors interact in the ASL lexicon.</p>
 						<ul>
-							<li>Sevcikova Sehyr, Z., Caselli, N., Cohen-Goldberg, A. M., & Emmorey, K. (2021). ​The ASL-LEX 2.0 Project: A database of lexical and phonological properties for 2,723 signs in American Sign Language. <i>Journal of Deaf Studies and Deaf Education</i>.</li>
+							<li>Sevcikova Sehyr, Z., Caselli, N., Cohen-Goldberg, A. M., & Emmorey, K. (2021). ​The ASL-LEX 2.0 Project: A database of lexical and phonological properties for 2,723 signs in American Sign Language. <i>Journal of Deaf Studies and Deaf Education</i>. <a href="https://doi.org/10.1093/deafed/enaa038" target="_blank">doi.org/10.1093/deafed/enaa038</a>.</li>
 							<li>Caselli, N., Sevcikova Sehyr, Z., Cohen-Goldberg, A. M., & Emmorey, K. (2017). ASL-LEX: A lexical database of American Sign Language. <i>Behavior Research Methods, 49</i>(2), 784-801. <a href="https://doi.org/10.3758/s13428-016-0742-0" target="_blank">doi:10.3758/s13428-016-0742-0</a>.</li>
 						</ul>
 
