--- a/visualization/index-urltest.html
+++ b/visualization/index-urltest.html
@@ -318,7 +318,7 @@ function getUrlVars() {
 
 <script>
 var arisnode = getUrlVars("sign");
-alert(sign);
+alert(arisnode);
 </script>
 </body>
 </html>
