--- a/visualization/index-urltest.html
+++ b/visualization/index-urltest.html
@@ -317,7 +317,7 @@ function getUrlVars() {
 <script src="js/renderNetworkGraph.js"></script>
 
 <script>
-var arisnode = getUrlVars("sign");
+var arisnode = getUrlVars()["sign"];
 alert(arisnode);
 alert('hello!');
 </script>
