--- a/visualization/index-urltest.html
+++ b/visualization/index-urltest.html
@@ -319,7 +319,7 @@ function getUrlVars() {
 <script>
 var arisnode = getUrlVars()["sign"];
 alert(arisnode);
-alert('hello!!');
+clickToZoom("street", "A_01_062");
 </script>
 </body>
 </html>
