--- a/visualization/index-urltest.html
+++ b/visualization/index-urltest.html
@@ -318,8 +318,8 @@ function getUrlVars() {
 
 <script>
 var arisnode = getUrlVars()["sign"];
-alert(arisnode);
 clickToZoom("street", "A_01_062");
+alert("!");
 </script>
 </body>
 </html>
