--- a/visualization/index-urltest.html
+++ b/visualization/index-urltest.html
@@ -314,7 +314,7 @@ function getUrlVars() {
 <script src="js/userInterface.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
 <script src="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="js/renderNetworkGraph.js"></script>
+<script src="js/renderNetworkGraph2.js"></script>
 
 <script>
 var arisnode = getUrlVars()["sign"];
