Fixed lexicalclass scatterplot bug

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -23,7 +23,7 @@
 <!-- filesaver -->
 <script src="//cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js"></script>
 
-<body >
+<body>
 <!-- middle visual container -->
 <div class="wrapper">
     <!-- Sidebar  -->
@@ -254,7 +254,6 @@
     </div>
 </div>
 <div class="sidebar-overlay"></div>
-
 <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered large-modal" role="document">
         <div class="modal-content">
@@ -275,6 +274,7 @@
             </div>
         </div>
     </div>
+</div>
 
     <!-- JS imports -->
     <link rel="stylesheet" href="css/bootstrap_sidebar_network.css">
@@ -300,9 +300,9 @@
       integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E="
       crossorigin="anonymous"></script>
 
-<script src="js/userInterface.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
-<script src="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-<script src="js/renderNetworkGraph.js"></script>
+    <script src="js/userInterface.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/d3-tip/0.7.1/d3-tip.min.js"></script>
+    <script src="//stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="js/renderNetworkGraph.js"></script>
 </body>
 </html>
